Removed horizontal scroll bar in promotional message, removed max height for text area to allow users to extend it. Fixed drop down menu to disable jumping to selected option.

--- a/app/components/dashboard/messages/CreateMessageDialog/OneTimeMessageForm/OneTimeMessageForm.module.scss
+++ b/app/components/dashboard/messages/CreateMessageDialog/OneTimeMessageForm/OneTimeMessageForm.module.scss
@@ -36,7 +36,6 @@
 
     textarea {
       min-height: 100px;
-      max-height: 100px;
     }
 
     :global(.form-group) {
