--- a/app/components/dashboard/messages/CreateMessageDialog/PromotionalMessageForm/PromotionalMessageForm.module.scss
+++ b/app/components/dashboard/messages/CreateMessageDialog/PromotionalMessageForm/PromotionalMessageForm.module.scss
@@ -20,6 +20,7 @@
 
   .formContainer {
     width: 500px;
+    overflow-x: hidden;
     overflow-y: auto;
 
     .formTitle {
@@ -37,7 +38,6 @@
 
     textarea {
       min-height: 100px;
-      max-height: 100px;
     }
 
     .dateField {
